# Compiler

./: CMakeLists.txt  GrammarWithLst.txt  README
src/: CMakeLists.txt  ErrorToken.cpp  ErrorToken.h  FloatToken.cpp  FloatToken.h  IntegerToken.cpp  IntegerToken.h  Scanner.cpp  Scanner.h  State.cpp  State.h  Token.cpp  Token.h  main.cpp
src/Parser/: CodeGenerator.cpp  CodeGenerator.h  ExpressionNode.cpp  ExpressionNode.h  ExpressionTree.cpp  ExpressionTree.h  IntAndStringConversion.cpp  IntAndStringConversion.h  Parser.cpp  Parser.h  SymbolRecord.cpp  SymbolRecord.h  SymbolTable.cpp  SymbolTable.h
src/Scanner/: ErrorToken.h  FloatToken.cpp  FloatToken.h  IntegerToken.h  Scanner.cpp  Scanner.h  State.cpp
src/SemanticParser/: SemanticParser.cpp  SemanticParser.h  SymbolRecord.cpp  SymbolRecord.h  SymbolTable.cpp  SymbolTable.h
src/SyntaxParser/: SyntaxParser.cpp  SyntaxParser.h
src/semanticTestPrograms/: semantic_program_symbol_table_out.txt  semantic_program_with_errors_error_out.txt
tests/: CMakeLists.txt  CodeGenerationTests.cpp  CodeGenerationTests.h  ParserTests.cpp  ScannerTests.cpp  ScannerTests.h  SemanticTests.cpp  SemanticTests.h  SemanticVerification.cpp  SemanticVerification.h  SemanticVerificationTest.cpp  SyntaxTests.cpp  gtest.cpp  large_error_out_2.txt  large_program.txt  large_program_2.txt  large_program_out.txt  large_program_out_2.txt  simple_program.txt
tests/codeTestPrograms/: code_prog.txt  recursive_function_program.m  recursive_function_program.txt  simple_program.m  simple_program.txt
tests/semanticTestPrograms/: full_program_semantic_error_output.txt  full_program_symbol_table_out.txt  semantic_program.txt  semantic_program_complex.txt  semantic_program_complex_symbol_table_out.txt  semantic_program_with_errors_error_out.txt  semantic_program_with_errors_symbol_table_out.txt  semantic_program_with_verification_errors_out.txt
tests/syntaxTestPrograms/: large_program_parser_deriv_out.txt  large_program_syntax.txt  syntax_with_errors_error_report_out.txt
tests/testPrograms/: given_program.txt  given_program_parser_deriv_out.txt  given_program_with_errors.txt  large_error_out_2.txt  large_program_2.txt  simple_program.txt  simple_program_errors.txt  simple_program_out.txt  simple_program_with_errors.txt  (+2 more)
(+4 files in other folders)
